feat: update swagger cause new method findAll on order handler
